<resources>
    <string name="app_name">My Places</string>
    <string name="google_maps_key" translatable="false">AIzaSyA4O7umpQGsBrGWlILbUjnxjJcOE5DHg2g</string>
    <string name="action_settings">Settings</string>
    <!--TODO - figure out a better message -->
    <string name="add_new_location">Add a new Place</string>
    <string name="title_activity_location_details">LocationDetailsActivity</string>
    <string name="add">Add</string>
    <string name="scan_for_wifi">Scan for Wifi Networks</string>
    <string name="add_new_wifi">Add a new WiFi Network</string>
    <string name="add_new_contact">Add New Contact</string>
    <string name="scanned_wifi_list">Scanned WIFI List</string>
    <string name="location_wifis">Location Wifi Networks</string>
    <string name="location_contacts">Contacts to Notify</string>
    <string name="location_list_empty_text">Nothing but sunshine here :)\nStart by adding a location e.g. Home</string>
    <string name="location_name">e.g New Office</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_location_name">Please enter a location name.</string>
    <string name="deleted">Deleted</string>
    <string name="undo">Undo</string>
    <string name="contacts">Contacts</string>
    <string name="Wifi">Wifi</string>

    <string name="contact_list_empty_text">No Contacts added for this location.\nAdd people to notify them of your updates about this location.</string>
    <!--TODO - figure out a better message -->
    <string name="location_list_empty_wifi">No Wifi Network Added for this place.\nReached ! takes help from your wifi connections for sending updates to your loved ones.</string>
    <string name="ok">OK</string>
    <string name="add_wifi_networks">Add Wifi Networks</string>
    <string name="from_map">Open Map</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="error_fetching_location">Error occurred while fetching your current location.</string>
    <string name="connection_failed">Connection Failed !</string>
    <string name="please_wait">Please wait..</string>
    <string name="no_map_application">No map application found in phone.</string>
    <string name="location_permission_rationale">This app needs permission to access location in order to detect and save your locations.</string>
    <string name="no_location_permission">Please provide location permission from settings in order to use app.</string>
    <string name="please_turn_gps_on">Please Turn your GPS on in order to add a location.</string>
    <string name="could_not_fetch_location">Could not fetch your current location. Please make sure that GPS is on.</string>
    <string name="please_provide_location_permission">Please provide location permission in order to add a location.</string>
    <string name="my_parked_car">My Parked Ride</string>
    <string name="park_ride">Park your Ride</string>
    <string name="fetching_location">Fetching Location</string>
    <string name="try_after_few_seconds">There was an error fetching your location. Please try after few seconds.</string>
    <string name="address">Address</string>
    <string name="notes">Notes</string>
    <string name="name">Name</string>
    <string name="no_address_added">No Address Added</string>
    <string name="no_notes_added">No Notes Added</string>
    <string name="share">Share</string>
</resources>
