<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_content"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_small">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_normal"
        android:text="@string/add_new_location"
        android:padding="@dimen/padding_small"/>

    <EditText
        android:id="@+id/et_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_name"
        android:textColorHint="@android:color/darker_gray"
        android:textColor="@android:color/black"
        android:inputType="text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@android:color/darker_gray"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/button_cur_loc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="@color/primary"
            android:text="@string/use_current_location"/>
    </LinearLayout>
</LinearLayout>