<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_default">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"/>

    <rrapps.myplaces.view.widgets.EditableTextView
        android:id="@+id/tv_address"
        android:layout_marginTop="@dimen/margin_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:text="@string/notes"/>

    <rrapps.myplaces.view.widgets.EditableTextView
        android:id="@+id/tv_notes"
        android:layout_marginTop="@dimen/margin_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2x"
        android:text="@string/name"/>

    <rrapps.myplaces.view.widgets.EditableTextView
        android:id="@+id/tv_name"
        android:layout_marginTop="@dimen/margin_x"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>