<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".MainActivityFragment">

    <ListView
        android:id="@+id/lv_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        android:layout_centerInParent="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_sunshine"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="@dimen/text_size_normal"
            android:lineSpacingMultiplier="1.3"
            android:text="@string/location_list_empty_text"/>

    </LinearLayout>

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        fab:menu_icon="@drawable/fab_add"
        fab:menu_colorNormal="@color/primary"
        fab:menu_colorPressed="@color/primary"
        fab:menu_colorRipple="@color/primary_dark">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_add_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location"
            fab:fab_size="mini"
            fab:fab_label="@string/add_new_location" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_add_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_car"
            fab:fab_size="mini"
            fab:fab_label="@string/park_ride" />

    </com.github.clans.fab.FloatingActionMenu>

</RelativeLayout>
